# forge-ai-repo-workbench

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  forge.py  mkdocs.yml  pyproject.toml
.github/workflows/: quality-gates.yml
cmd/: cli.py
core/: analysis_primitives.py  capability_model.py  config.py  context.py  effects.py  env_loader.py  evidence_ranking_foundation.py  framework_profiles.py  graph_cache.py  init_foundation.py  llm_integration.py  llm_observability.py  mode_execution_foundation.py  mode_orchestrator.py  mode_transitions.py  observability_foundation.py  orchestration_foundation.py  output_contract_foundation.py  output_contracts.py  output_views.py  prompt_profiles.py  protocol_log.py  repo_io.py  retrieval_foundation.py  review_rules.py  run_history.py  run_reference.py  runtime.py  runtime_settings_foundation.py  runtime_settings_foundation_registry.py  runtime_settings_registry.py  runtime_settings_resolver.py  session_store.py  step_protocol.py  target_resolution_foundation.py  tools.py  web_retrieval_foundation.py  web_search_foundation.py  workspace_foundation.py  workspace_locators.py  (+2 more)
docs/ai/: test-fix-prompts.md
docs/features/: 000-feature-plan.md  001-core-cli-and-capability-model.md  002-index.md  003-query.md  004-explain.md  005-review.md  006-describe.md  007-test-drafting.md  008-shared-analysis-primitives.md  009-index-consumption-and-prioritization.md  (+90 more)
forge/: __main__.py
forge_cmd/: cli.py
modes/: ask.py  describe.py  doctor.py  explain.py  index.py  init.py  query.py  review.py  runs.py  settings.py  test.py
scripts/: check-docs-locale-parity.sh  run_quality_gates.py
site/: 404.html  index.html  sitemap.xml
tests/: test_evidence_ranking_foundation.py  test_foundation_mypy_contracts.py  test_mode_execution_foundation.py  test_mutation_infrastructure.py  test_observability_foundation.py  test_orchestration_foundation.py  test_output_contract_foundation.py  test_repo_wide_mypy_baseline_gate.py  test_retrieval_foundation.py  test_target_resolution_foundation.py  test_workspace_foundation.py
(+144 files in other folders)
