[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-repo-tool"
version = "0.1.0"
description = "Forge: transparent, composable AI-assisted repository tool"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
forge = "forge.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["forge", "forge_cmd", "core", "modes"]
